@@ -1,3 +1,10 @@
+TAG:  qcreports_db-21-0-1
+DATE: 12/29/2003
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 5449; MRK_SharedSynonyms.py
+
 TAG:  qcreports_db-21-0-0
 DATE: 12/18/2003
 STAFF: lec
